--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,7 +9,9 @@
 
     <android.support.v4.widget.SwipeRefreshLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:id="@+id/refresh_mainActivity"
+        >
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -21,8 +23,9 @@
             </android.support.v7.widget.Toolbar>
             <FrameLayout
                 android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="1"></FrameLayout>
+                android:layout_height="match_parent"
+                android:id="@+id/fl_content"
+               ></FrameLayout>
         </LinearLayout>
     </android.support.v4.widget.SwipeRefreshLayout>
 
