--- a/app/src/main/res/layout/activity_function.xml
+++ b/app/src/main/res/layout/activity_function.xml
@@ -8,21 +8,16 @@
 
 
 
-        <ImageView
-            android:layout_width="match_parent"
-            android:layout_height="230dp"
-            android:id="@+id/iv"
-            />
+       <fragment
+           android:layout_width="match_parent"
+           android:layout_height="260dp"
+               android:name="com.lisen.android.zhihunews.fragment.FunctionFirstFragment"
+               android:id="@+id/first_fragment_function" />
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/tv"
-            android:text="我是传奇"
-            android:textSize="18sp"
-            android:textColor="#000000"
-            />
-
-
+       <fragment
+           android:layout_width="match_parent"
+           android:layout_height="250dp"
+           android:name="com.lisen.android.zhihunews.fragment.FunctionSecondFragment"
+           android:id="@+id/second_fragment_function" />
 
 </LinearLayout>
