--- a/app/src/main/res/layout/menu.xml
+++ b/app/src/main/res/layout/menu.xml
@@ -2,7 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="300dp"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:clickable="true">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -69,12 +70,12 @@
             android:paddingBottom="10dp"
             android:paddingLeft="80dp"
             android:paddingTop="10dp"
+            android:id="@+id/tv_menu_home"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textColor="@color/menuFirstPage"
             android:textSize="18sp"
             android:text="@string/first_page"
-
             android:background="@color/menuFirstBackground"
 
             />
